Name: Chart-docimages
Version: 1.2.2
License: BSD3
License-file: LICENSE
Copyright: Tim Docker, 2014
Author: Tim Docker <tim@dockerz.net>
Maintainer: Tim Docker <tim@dockerz.net>
Homepage: https://github.com/timbod7/haskell-chart/wiki
Synopsis: Generate images used in the Chart documentation.
Description: Create the SVG images used within the Chart documentation.
Category: Graphics
Cabal-Version: >= 1.8
Build-Type: Simple

source-repository head
  type:     git
  location: https://github.com/timbod7/haskell-chart

-- TODO: have a driver routine, so just one executable is needed
Executable PolarExample
  Main-Is:             PolarExample.lhs
  HS-Source-Dirs:      src/

  ghc-options: -Wall

  -- Only adding in constraints for packages not
  -- used by Chart itself
  Build-Depends:
    base
    , Chart >= 1.2.2 && < 1.3
    -- , Chart-cairo
    , Chart-diagrams
    , colour
    , containers
    , data-default-class
    , lens
    , random >= 1.0 && < 1.2
